# WhisperTyper

./: .gitignore  404.html  README.md  build.py  check_hip.py  clean_lock.py  index.html  list_devices.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run_app_debug.py  set_device.py  test_imports.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  docs.yml  release.yml
architecture/: index.html
assets/: README.txt
docs/: architecture.md  index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
src/: controller.py  main.py
src/core/: audio_service.py  inference.py  llm_processor.py  text_injector.py
src/ui/: overlay.py  resources.py  settings.py  tray.py
src/utils/: config.py  hardware.py  lifecycle.py  logger.py  sound.py
tests/: manual_test_plan.md  verify_debug_logging.py  verify_hardware.py
usage/: index.html
