[project]
name = "whisper-typer"
version = "1.1.0"
description = "A local, privacy-first voice-to-text tool for Windows using faster-whisper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ctranslate2>=4.5.0",
    "sounddevice>=0.5.1",
    "pynput>=1.7.7",
    "faster-whisper>=1.1.0",
    "pyside6>=6.8.1",
    "pydantic>=2.10.6",
    "platformdirs>=4.3.6",
    "wmi>=1.5.1",
    "pywin32>=308",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.2",
]
